--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="ru">
 <head>
 <meta charset="utf-8" />
-<title>Код блочного сайта</title>
+<title>Страница для веб-дизайна</title>
 
-/* Стилевое оформление */
+
 
 <style>
 body{
-  background:#c0c0c0; /* Меняется фон экрана, выбирается здесь */
+  background:#626264; /* Меняется фон экрана, выбирается здесь */
 }
 
 #wrapper{ /* Оболочка страницы сайта */
   width: 900px; /* Меняется ширина страницы */
   margin: 0 auto;
-  background:#f2e8c9; /* Меняется задний фон страницы */
+  background:#2a0494; /* Меняется задний фон страницы */
 }
 
 /* Шапка сайта */
@@ -23,8 +23,8 @@ body{
 position:relative; /* Задаём блоку относительное позиционирование для того, чтобы затем размещать, в нём другие элементы и позиционировать относительно его границ поверх фоновой картинки и заголовка */
   height: 250px; /* Высота шапки */
   background-color: #ffffff; /* Фон шапки */
-   margin-bottom: 5px; /* Нижний отступ шапки от остального контента */
-  border-radius: 5px; /* Закругляются углы блока */
+   margin-bottom: 10px; /* Нижний отступ шапки от остального контента */
+  border-radius: 10px; /* Закругляются углы блока */
   box-shadow: rgba(0,0,0,0.5) 0px 1px 3px; /* Тень. Визуально приподнимает блок над оболочкой */
 }
 img{ /* Фоновая картинка в шапке */
@@ -48,11 +48,11 @@ h1{ /* Заголовок сайта */
 
 #sidebar{ /* Блок сайдбара */
   background-color: #ffffff; /* Фон блока */
-  width: 180px; /* Ширина блока */
+  width: 880px; /* Ширина блока */
   padding: 10px; /* Отступ текста от краёв */
   float: right; /* Размещаем блок справа от других элементов, наплывание или обтекание справа). Если делать сайдбар слева, то значение right меняем на left */
   border-radius: 5px; /* Закругляем углы блока */
-  box-shadow: rgba(0,0,0,0.5) 0px 1px 3px; /* Задаём блоку тень */
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 3px; /* Задаём блоку тень */
 }
 .marcer{ /* Галочки маркеры меню */
   float: left; /* Размещаем слева от текста */
@@ -66,7 +66,7 @@ h1{ /* Заголовок сайта */
   width: 676px; /* Ширина статьи */
   padding: 10px; /* Отступ текста от краёв блока */
   background: #ffffff; /* Фон статьи */
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: rgba(0,0,0,0.5) 0px 1px 3px;
 }
 .left{ /* Картинка в тексте слева */
@@ -83,11 +83,11 @@ h1{ /* Заголовок сайта */
   height:80px; /* Высота блока подвала */
   background-color: #ffffff; /* Фон блока подвала */
   margin-bottom: 10px; /* Отступ снизу */
-  border-radius: 5px; /* Закруглённые углы */
+  border-radius: 10px; /* Закруглённые углы */
   box-shadow: rgba(0,0,0,0.5) 0px 1px 3px; /* Тень блока */
 }
 .clear{ /* Запрет наплывания. Устанавливается для того, чтобы блок контента, при заполнении текстом и изображениями не наплывал на подвал */
-  clear: both;
+  clear: 0;
 }
   .fon{ /* Номер телефона */
   float:left; /* Разрешаем другим элементам обтекать абзац справа */
@@ -108,67 +108,60 @@ h1{ /* Заголовок сайта */
 <!--Шапка сайта-->
     <div id="header">
 <!--Заголовок сайта-->
-      <h1>Грузоперевозки</h1>
-<!--Описание (телефон)-->
-        <p class="nomer">234-49-50 <br> +7 900 650 33 45</p>
+      <h1>Мое фото:111</h1>
+
+ 
 <!--Фоновая картинка в шапке сайта-->
-      <img src="http://trueimages.ru/img/cf/26/9116df15.png">
+     
     </div>
 <!--Сайдбар-->
     <div id="sidebar">
 <!--меню-->
-      <h3>На нашем сайте</h3>
+      <h3>Ссылка на мой профиль Git hub:</h3>
 <!--Картинки маркеров меню (галочки)-->
-        <p><img class="marcer" src="http://trueimages.ru/img/99/91/dea39f15.png" width="10" height="10">Наши сотрудники</p>
-        <p><img class="marcer" src="http://trueimages.ru/img/99/91/dea39f15.png" width="10" height="10">Наша техника</p>
-        <p><img class="marcer" src="http://trueimages.ru/img/99/91/dea39f15.png" width="10" height="10">Прайс</p>
-<!--Прямая синяя линия-->
-          <hr width="50" color="#037FFC" size="5">
+<p>
+<!--Ссылка на страницу сайта-->
+<a href="https://github.com/Ciuokaze" >
+<span style="margin-left:0px;">Мой GitHub</span></a>
+<!--Закрываем абзац-->
+</p>
+<!--Закрываем строку Меню-->
+</td>
+</tr>
+      
 <!--Общая информация в сайдбаре-->
-      <h3>Другая информация</h3>
-    </div>
-<!--Основной контент (статья)-->
-    <div id="content">
-<!--Картинка слева-->
-      <img class="left" src="http://trueimages.ru/img/81/90/b1718f15.png">
+<h3>Мои лабораторные работы:</h3>
+<p>
+<!--Ссылка на страницу сайта-->
+<a href="https://github.com/Ciuokaze/web-lessons/tree/main/01">
+  <span style="margin-left:5px;">Первая Лабораторная</span></a>
+<!--Закрываем абзац-->
+</p>
+<!--Ссылка на страницу сайта-->
+<a href="https://github.com/Ciuokaze/web-lessons/tree/main/02">
+<span style="margin-left:5px;">Вторая Лабораторная</span></a>
+<!--Закрываем абзац-->
+</p>
+<!--Закрываем строку Меню-->
+</td>
+</tr>
+</table>
 <!--Заголовок статьи-->
-        <h3>Наша работа</h3>
+        <h3>Арсенийййййййййййййй СЕРЕЕЕЕДИИИИИИИН135</h3>
 <!--Текст статьи-->
-<p>Здравствуйте уважаемые будущие веб-мастера!</p>
-<p>Мне 55 лет и я рад приветствовать Вас на своём сайте.
-Этот сайт первый, который я разработал самостоятельно,
-а до этого умел только входить в интернет.
-Почему я решил его сделать?</p>
-<p>За те 3 месяца, пока
-разбирался в сайтостроении и создавал этот ресурс
-обнаружилось, что авторы руководств по созданию
-сайтов считают многие нюансы само собой разумеющимися
-и не обращают на них внимание.</p>
-<p>А мне, учитывая
-возраст и «опыт», было не просто понять как раз эти
-нюансы, они отнимали больше всего времени. И я решил
-написать свой материал, так что-бы другим было легче
-сориентироваться в потоке новой информации.</p>
-<!--Картинка справа-->
-      <img class="right" src="http://trueimages.ru/img/0d/64/07a18f15.png">
+<p>Какой-то текст</p>
 
-<p>Здесь
-«разжеваны» все мелочи сопровождающие создание сайта,
-мимо которых обычно проскакивают другие авторы.
-Если вам что-то будет непонятно, спрашивайте, для
-меня нет «глупых» вопросов.
-Читайе и создавайте свой сайт самостоятельно, каким
-бы ни был Ваш возраст и стаж работы на компьютере.</p>
-<p>Уверен, у Вас получится еще лучше и уж точно, в
-несколько раз быстрее, чем у меня.</p>
+
+
+<p>The end так-то</p>
+
     </div>
 <!--Запрет наплывания-->
   <div class="clear"></div>
 <!--Подвал-->
     <div id="footer">
-      <p class="fon"><strong>Телефон:<br> 265-48-76</strong> </p>
-      <p class="fax"><strong>Факс:<br> 265-85-97</strong></p>
-      <p class="mail"><strong>E-mail<br>ctoto@mail.ru</strong></p>
+      <p class="fon"><strong>Телефон:<br> 096-158-67-36</strong> </p>
+      <p class="mail"><strong>E-mail<br>arseniy.seredin@gmail.com</strong></p>
 
     </div>
   </div>
